k8s-kurs/demo-projekt/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: demo-projekt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-pod
  template:
    metadata:
        labels:
            app: mysql-pod
    spec:
      containers:
        - name: mysql-container
          image: mysql:9.0.1
      volumes:
        - name: mysql-volume
          persistentVolumeClaim:
            claimName: mysql-pvc
