k8s-kurs/demo-projekt/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywordpress-deployment
  namespace: demo-projekt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywordpress-pod
  template:
    metadata:
      labels:
        app: mywordpress-pod
    spec:
      containers:
        - name: mywordpress-container
          image: wordpress:6.6.0
          
      volumes:
        - name: mywordpress-volume
          persistentVolumeClaim:
            claimName: mywordpress-pvc
