k8s-kurs/demo-projekt/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: demo-projekt
spec:
  selector:
    app: mysql-pod
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
