k8s-kurs/demo-projekt/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywordpress-service
  namespace: demo-projekt
spec:
  selector:
    app: mywordpress-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
